# file-descriptor

./: CMakeLists.txt
include/: file_descriptor.hpp
src/: file_descriptor.cpp
test/: CMakeLists.txt
test/tests/: file_descriptor.cpp
